Minor CSS adjustments to resolve spacing and font issues.

--- a/waters-aem-frontend/src/styles/categoriesmenu.scss
+++ b/waters-aem-frontend/src/styles/categoriesmenu.scss
@@ -12,6 +12,9 @@
 
     .heading--with-selected-value {
         width: 100%;
+        h3 {
+            margin-bottom: $space-s;
+        }
     }
 
     .back-btn {
