--- a/waters-aem-frontend/src/styles/skudetails.scss
+++ b/waters-aem-frontend/src/styles/skudetails.scss
@@ -126,7 +126,7 @@
 
         &__buttons {
             display: flex;
-            margin-top: $space-xs;
+            margin-top: 0;
 
             .cmp-button {
                 margin-bottom: $space-s;
@@ -499,7 +499,7 @@
 
     .cmp-sku-details__title {
         @include font-h3;
-        margin-bottom: $space-xxs;
+        margin-bottom: $space-s;
 
         @include tablet-and-under {
             margin-bottom: $space-s;
@@ -510,7 +510,7 @@
         background-color: $color-background-light;
         padding: $space-m $space-m 0 $space-m;
         width: 100%;
-        margin-bottom: $space-s;
+        margin-bottom: $space-xxs;
         clear: both;
 
         @include mobile {
